--- a/arch/arm/configs/cyanogenmod_hercules_defconfig
+++ b/arch/arm/configs/cyanogenmod_hercules_defconfig
@@ -659,7 +659,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-CONFIG_LINK_CPU_GOVERNORS=y
+# CONFIG_LINK_CPU_GOVERNORS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
@@ -1468,7 +1468,7 @@ CONFIG_KEYBOARD_PMIC8XXX=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_QCIKBD is not set
 CONFIG_KEYPAD_CYPRESS_TOUCH=y
-# CONFIG_TOUCH_CYPRESS_SWEEP2WAKE is not set
+CONFIG_TOUCH_CYPRESS_SWEEP2WAKE=y
 CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
@@ -2132,6 +2132,7 @@ CONFIG_VIDEO_IR_I2C=y
 #
 # CONFIG_VIDEO_THS7303 is not set
 # CONFIG_VIDEO_M52790 is not set
+# CONFIG_VIDEO_VIVI is not set
 # CONFIG_VIDEO_CPIA2 is not set
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_NOON010PC30 is not set
@@ -2474,7 +2475,12 @@ CONFIG_BACKLIGHT_GENERIC=y
 # Console display driver support
 #
 CONFIG_DUMMY_CONSOLE=y
-# CONFIG_FRAMEBUFFER_CONSOLE is not set
+CONFIG_FRAMEBUFFER_CONSOLE=y
+# CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY is not set
+# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
+# CONFIG_FONTS is not set
+CONFIG_FONT_8x8=y
+CONFIG_FONT_8x16=y
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
