--- a/arch/arm/configs/cyanogenmod_hercules_defconfig
+++ b/arch/arm/configs/cyanogenmod_hercules_defconfig
@@ -35,7 +35,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cerux"
+CONFIG_LOCALVERSION="-cerux-1.47_jb4.1.2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -515,6 +515,7 @@ CONFIG_PMIC8058_XOADC_CAL=y
 # CONFIG_Q1_KOR_AUDIO is not set
 # CONFIG_ATHEROS_WIFI is not set
 # CONFIG_NL80211_TESTMODE is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Processor Type
@@ -659,7 +660,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-# CONFIG_LINK_CPU_GOVERNORS is not set
+CONFIG_LINK_CPU_GOVERNORS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
@@ -1912,9 +1913,10 @@ CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
-CONFIG_THERMAL_TSENS=y
-# CONFIG_THERMAL_TSENS8960 is not set
+# CONFIG_THERMAL_TSENS is not set
+CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_PM8XXX=y
+CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
