defconfig: enable msm_thermal, cpu_gov_sync, msm_mpdecision, fast_charge, smartassV2, ondemand 2nd phase, updated version

--- a/arch/arm/configs/cyanogenmod_hercules_defconfig
+++ b/arch/arm/configs/cyanogenmod_hercules_defconfig
@@ -35,19 +35,16 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-# CONFIG_LOCALVERSION="-cyanogenmod"
-CONFIG_LOCALVERSION="-cerux"
+CONFIG_LOCALVERSION="-cerux-v1.50_beta2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
-CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
 CONFIG_KERNEL_LZMA=y
-# CONFIG_KERNEL_LZO is not set
 # CONFIG_KERNEL_XZ is not set
-
-
+# CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -422,9 +419,10 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
+CONFIG_MSM_MPDEC=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MIN=384000
 CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=384000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -465,9 +463,7 @@ CONFIG_USA_MODEL_SGH_T989=y
 # CONFIG_SAMSUNG_MEMORY_LAYOUT_ARRANGE is not set
 CONFIG_SEC_AUDIO_DEVICE=y
 # CONFIG_SEC_EXTRA_VOLUME_SOL is not set
-CONFIG_SEC_DVFS=y
-# CONFIG_SEC_DVFS_DUAL is not set
-CONFIG_SEC_DVFS_UNI=y
+# CONFIG_SEC_DVFS is not set
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_PIL=y
@@ -491,6 +487,7 @@ CONFIG_MSM_V2_TLMM=y
 CONFIG_MSM_SECURE_IO=y
 CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_PM8X60=y
+CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED is not set
 CONFIG_MSM_WATCHDOG=y
@@ -526,6 +523,7 @@ CONFIG_PMIC8058_XOADC_CAL=y
 CONFIG_SEC_LOG_LAST_KMSG=y
 # CONFIG_ANDROID_WIP is not set
 # CONFIG_COMPACTION_RETRY is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # System MMU
@@ -674,16 +672,19 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_LINK_CPU_GOVERNORS=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
 CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
@@ -692,11 +693,15 @@ CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
 CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
 # CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS is not set
+CONFIG_CPU_FREQ_MIN_TICKS=10
+CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE_FREQ=1242000
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_IDLE=y
@@ -1935,9 +1940,10 @@ CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
-CONFIG_THERMAL_TSENS=y
-# CONFIG_THERMAL_TSENS8960 is not set
+# CONFIG_THERMAL_TSENS is not set
+CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_PM8XXX=y
+CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
