defconfig: ROW I/O Scheduler enabled, enabled sleep stats, changed version

--- a/arch/arm/configs/cyanogenmod_hercules_defconfig
+++ b/arch/arm/configs/cyanogenmod_hercules_defconfig
@@ -35,7 +35,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cerux-v1.50_beta2"
+CONFIG_LOCALVERSION="-cerux-v1.50_beta4"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -182,10 +182,12 @@ CONFIG_BLK_DEV_BSG=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
@@ -496,7 +498,6 @@ CONFIG_MSM_JTAG=y
 CONFIG_MSM_ETM=y
 # CONFIG_MSM_QDSS is not set
 # CONFIG_CLOCK_MAP is not set
-CONFIG_MSM_SLEEP_STATS=y
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 CONFIG_MSM_GSBI9_UART=y
@@ -3455,7 +3456,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZO=y
 
 #
 # Random Number Generation
